--- a/public/admin1/admin.css
+++ b/public/admin1/admin.css
@@ -1,3 +1,4 @@
+/*  Global css  */
 * {
     margin: 0;
     padding: 0;
@@ -10,7 +11,40 @@ body {
     position: relative;
     display: flex;
 }
+button.normal {
+    font-size: 14px;
+    font-weight: 600;
+    padding: 15px 30px;
+    color: #fff;
+    background-color: #088178;
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    transition: 0.2s;
+}
+button.normal:hover {
+    background-color: #253047;
+    color: #fff;
+}
+input {
+    text-align: center;
+    width: 300px;
+    padding-top: 10px;
+}
+a {
+    text-decoration: none;
+}
+.a-links {
+    border-radius: 3px;
+    background-color: #088178;
+    color: #fff;
+    border: 5px solid #088178;
+    text-decoration: none;
+}
+/*  End   */
 
+/*  Dashboard   */
 #menu {
     background: #111827;
     width: 300px;
@@ -200,6 +234,10 @@ body {
     font-size: 15px;
     color: #828997;
 }
+
+/*  Add Products    */
+
+
 
 @media (max-width: 769px) {
     #menu {
